Avoid sorting list of build items
During the work on build step ordering, we decided to go with an
immutable list for the build items, rather than always copying to a new
list for a few corner cases.
This makes the contract clearer but... there was one Collections.sort()
remaining.

It would probably be a good idea to add a test for this feature to make
sure we don't regress anymore.

This is a follow-up of https://github.com/quarkusio/quarkus/pull/52129.

It supersedes https://github.com/quarkusio/quarkus/pull/52463 and is a
fix for https://github.com/quarkusio/quarkus/issues/52462.